# poc-stream-processor-faust-avro

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.j2  README.md  docker-compose.yml  make  pyproject.toml  setup.cfg
src/: __main__.py  config.py  resources.py  settings.py  vault.py
src/core/: pages.py
src/transfer_resources/: agent.py  schema.py
tests/unit/: conftest.py
tests/unit/core/: test_pages.py
tests/unit/transfer_resources/: test_agent.py
